--- a/package.json
+++ b/package.json
@@ -7,5 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@discordjs/opus": "^0.8.0",
+    "@discordjs/voice": "^0.14.0",
+    "audio-mixer": "^2.1.4",
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3",
+    "prism-media": "^1.3.4",
+    "tweetnacl": "^1.0.3"
+  }
 }
